cmake_minimum_required(VERSION 2.6)
project(WebApps)
#Libraries:
add_subdirectory(CoreToolkit)
add_subdirectory(WebToolkit)
#Examples:
add_subdirectory(HelloWorld)
add_subdirectory(SimpleBlog)
add_subdirectory(SessionDemo)
add_subdirectory(FileServer)
add_subdirectory(ImageBoard)
#Docs:
add_subdirectory(Docs)
