cmake_minimum_required(VERSION 2.6)
file(GLOB_RECURSE SOURCES *.cpp *.h)
add_library(WebToolkit ${SOURCES})
if(UNIX)
	add_definitions(-D_FILE_OFFSET_BITS=64)
	if(CMAKE_SYSTEM_NAME STREQUAL "SunOS")
		target_link_libraries(WebToolkit pthread nsl socket)
	else(CMAKE_SYSTEM_NAME STREQUAL "SunOS")
		target_link_libraries(WebToolkit pthread)
	endif(CMAKE_SYSTEM_NAME STREQUAL "SunOS")
else(UNIX)
	target_link_libraries(WebToolkit ws2_32)
endif(UNIX)
